external-crates/move/crates/move-compiler/tests/move_2024/naming/unbound_var_call.exp
error[E03009]: unbound variable
  ┌─ tests/move_2024/naming/unbound_var_call.move:6:9
  │
6 │         fo();
  │         ^^ Unbound function 'fo' in current scope

